<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TransferFunds"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etCust_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvTransfer_custUsername"
            android:inputType="textAutoCorrect" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ettransferAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvTransfer_Amount"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ettransferDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvTransfer_Message"
            android:inputType="textAutoCorrect" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnTransfer_Transfer" />

</LinearLayout>