<resources>
    <string name="app_name">Insecure Pay</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="remember_me">Remember Me</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_field">Field is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--Following strings are for Login-->
    <string name="prompt_server_address">Enter Server Address</string>
    <string name="account_lockout_duration">1</string>
    <string name="login_failed_account_locked">Login Failed and Account Locked</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_successful">Login Successful</string>
    <string name="menu_change_url">Change Server Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="changeServer_url">http://0.0.0.0:8080</string>
    <string name="changeServer_path">/InsecurePayServiceServer/rest/</string>
    <string name="send">SEND</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="information_mismatch">Please verify your information and try again.</string>
    <string name="default_password_link_sent">Your password has been reset.</string>
    <string name="common_VO">commonVO</string>
    <string name="sharedPreferenceLogin">loginPrefs</string>

    <!--Following strings are for Connectivity-->
    <string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
    <!--<string name="default_address">http://192.168.1.106:8080/InsecurePayServiceServer</string>-->
    <string name="default_path">/rest/</string>
    <string name="no_network">No network connection</string>
    <string name="progress_dialog_message">Loading. Please wait..</string>
    <string name="login_path">login</string>
    <string name="forgot_password_path">forgotPassword</string>
    <string name="cust_details_path">custService</string>
    <string name="change_password_path">changePassword</string>
    <string name="account_details_path">accountService</string>
    <string name="transfer_funds_path">transferFunds</string>
    <string name="transfer_validation_path">transferValidation</string>
    <string name="accountno_validation_path">accountNumberValidation</string>
    <string name="activity_history_path">activityHistory</string>
    <string name="chat_path">chatService</string>
    <string name="logout_path">logout</string>

    <!--For Navigation Drawer Toolbar titles-->
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log out</string>
    <string name="nav_homepage">Home</string>
    <string name="nav_account_manage">Account Management</string>
    <string name="nav_transfer_funds">Transfer Funds</string>
    <string name="nav_activity_history">Activity History</string>
    <string name="nav_interest_calc">Interest Calculator</string>
    <string name="nav_support_chat">Support Chat</string>
    <string name="nav_logout">Logout</string>

    <!--For Home Fragment-->
    <string name="tvHome_accountNumber">Account Number</string>
    <string name="tvHome_accountBalance">Balance</string>
    <string name="tvHome_insecure_pay_Account">InsecurePay Account</string>

    <!--For Account Management Fragment-->
    <string name="tvAccount_accountNumber">Account Number</string>
    <string name="tvAccount_userDOB">Date of Birth</string>
    <string name="tvAccount_name">Name</string>
    <string name="tvAccount_ssn">Social Security</string>
    <string name="tvAccount_email">Email Address</string>
    <string name="tvAccount_phoneNumber">Phone Number</string>
    <string name="tvAccount_addressStreet">Street Address</string>
    <string name="tvAccount_addressCity">City</string>
    <string name="tvAccount_addressState">State</string>
    <string name="tvAccount_addressZip">ZipCode</string>
    <string name="cust_no">custNo</string>
    <string name="account_update_successful">Update successful</string>
    <string name="account_update_failed">Update failed</string>
    <string name="btnAccount_update">Update</string>
    <string name="btnAccount_change_password">Change Password</string>
    <string name="etAccount_phone_hint">0123456789</string>
    <string name="accountZipError">Minimum length of zip should be 5</string>
    <string name="accountPhoneError">Minimum length of phone number should be 10</string>
    <string name="accountFixBeforeUpdate">Please resolve the errors first</string>

    <!--For Transfer Funds Activity-->
    <string name="tvTransfer_fromAccountNo">Your Account No</string>
    <string name="tvTransfer_fromCustNo">Your Customer No</string>
    <string name="tvTransfer_toAccountNo">Recipient Account No</string>
    <string name="tvTransfer_toCustNo">Recipient Customer No</string>
    <string name="tvTransferAmount">Transfer Amount</string>
    <string name="tvTransferDetails">Transfer Details</string>
    <string name="btnCancel">Cancel</string>
    <string name="transferFunds_VO">transferFundsVO</string>
    <string name="btnConfirm">Confirm</string>
    <string name="transfer_successful"> Transfer successful</string>
    <string name="transfer_unsuccessful"> Amount was not transferred</string>

    <!--For Forgot Password -->
    <string name="etForgotPass_AccountNumber">Enter your Account Number</string>
    <string name="etForgotPass_ssnNumber">Enter your SSN Number</string>
    <string name="etForgotPass_username">Enter your username</string>
    <string name="tvForgotPass_hereToHelp">We\'re here to help</string>

    <!--For Change Password -->
    <string name="etChangePassword_newPassword">Enter your new password</string>
    <string name="etChangePassword_confirmPassword">Confirm new password</string>
    <string name="error_username_does_not_exist">Username does not exist</string>
    <string name="password_not_changed">Password was not changed</string>
    <string name="password_changed">Password Changed to </string>

    <!--For Transfer Fragment-->
    <string name="tvTransfer_custUsername">Enter the customer username</string>
    <string name="tvTransfer_Amount">Enter the amount</string>
    <string name="tvTransfer_Message">Message</string>
    <string name="btnTransfer_Transfer">TRANSFER</string>
    <string name="title_activity_transfer">TransferActivity</string>

    <!--For Activity History Fragment-->
    <string name="tvActivityHistory_AccountNo">Enter Account No</string>
    <string name="btnSubmit">Submit</string>
    <string name="account_number">accountNo</string>


    <!--For Transaction List item-->
    <string name="tvActivityHistory_Description">Description</string>
    <string name="tvActivityHistory_Date">Date</string>
    <string name="tvActivityHistory_afterAmount">After amount</string>
    <string name="tvActivityHistory_TransactionAmount">Transaction Amount</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvAccount_balance">Balance</string>
    <string name="IntCalc_FillAccountNumber" />
    <string name="tvIntCalc_PrincipalAmount">Principal</string>
    <string name="etIntCalc_FillPrincipalAmount">Enter principal amount</string>
    <string name="tvIntCalc_Period">Period</string>
    <string name="etIntCalc_FillYear">Years</string>
    <string name="tvIntCalc_Date">Enter Number</string>
    <string name="tvIntCalc_CreditScore">Credit Score</string>
    <string name="tvIntCalc_FillCreditScore" />
    <string name="btnIntCalc_Calc">Calculate</string>
    <string name="Excellent">Excellent</string>
    <string name="Good">Good</string>
    <string name="Fair">Fair</string>
    <string name="Bad">Bad</string>
    <string name="tvIntCalc_Interest">Interest </string>
    <string name="tvIntCalc_FillInterest" />
    <string name="tvIntCalc_RateOfInterest">Rate Of Interest </string>
    <string name="tvIntCalc_FillRateOfInterest" />
    <string name="tvIntCalc_Percent">"%"</string>

    <!--For Chat Fragment-->
    <string name="chatUploadSuccess">File upload successful</string>
    <string name="chatUploadFailure">File upload failed</string>
    <string name="chatThankYou">Thank you for your message</string>


    <string-array name="Date">
        <item>Years</item>
        <item>Months</item>
        <item>Days</item>
    </string-array>
</resources>
