...
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/btnSignIn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold" />
...
