...
                android:id="@+id/tvAccount_addressZip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="15dp"
                android:layout_marginTop="19dp"
                android:labelFor="@+id/etAccount_fillAddressZip"
                android:text="@string/tvAccount_addressZip"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etAccount_fillAddressZip"
                android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:enabled="false"
                android:text="@string/btnAccount_update" />

            <Button
                android:id="@+id/btnAccount_changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/btnAccount_change_password" />
        </TableRow>
    </TableLayout>
...
